--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ node_modules/
 # Optional npm cache directory
 .npm
 
-# Built js file
-main.js
+# Built js file (can't do because I don't want to pay for actions)
+# main.js
